<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:background="@color/black"
            android:scaleType="centerCrop"
            android:src="@drawable/home_image"
            android:padding="5dp"
            android:cropToPadding="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idView"
            android:text="the lion's den"
            android:layout_gravity="right|bottom"
            android:padding="10dp"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/birdButs"
            android:layout_marginRight="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vultureButton"
                android:id="@+id/vultureBut"
                android:background="@drawable/rounded_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ostrichButton"
                android:id="@+id/ostrichBut"
                android:background="@drawable/rounded_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/reptileButs">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chameleonButton"
                android:id="@+id/chameleonBut"
                android:background="@drawable/rounded_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pythonButton"
                android:id="@+id/pythonBut"
                android:background="@drawable/rounded_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/mammalButs"
            android:layout_marginLeft="10dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dolphinButton"
                android:id="@+id/dolphinBut"
                android:background="@drawable/rounded_button"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chimpanzeeButton"
                android:id="@+id/chimpanzeeBut"
                android:textSize="13dp"
                android:background="@drawable/rounded_button"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>

